# ply_viewer

./: .gitignore  CMakeLists.txt  README  README.md
RHEX_Description_data/ply_data/: BoitierFixePivotY.ply  BoitierFixePivotZ.ply  BoitierMobilePivotY.ply  Epaule1.ply  Epaule1Droite.ply  Epaule1Gauche.ply  Epaule2.ply  Epaule2Droite.ply  Epaule2Gauche.ply  EpauleDroite.ply  EpauleGauche.ply  PatteElement0.ply  PatteElement0a.ply  PatteElement1.ply  PatteElement2.ply  PureVrmlExport.ply  semelle.ply
src/: TODO  main.c  matrix.c  matrix.h  model.c  model.h  paul_ply.c  paul_ply.h  ply.c  point.c  point.h  rigidobject.c  rigidobject.h  triangle.c  triangle.h
src/ply/: paul_ply.c  paul_ply.h  ply.c
stanford_data/: README.txt  cube.ply
